----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-08-15 Michal Cihar  <nijel@users.sourceforge.net>
    * Documentation: Synced export FAQ with export page.

2003-08-14 Michal Cihar  <nijel@users.sourceforge.net>
    * server_privileges.php3: Fix notice about undefined index (bug #780861).

2003-08-13 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php3: do not check both radios (confuses Netscape 4.8)

2003-08-13 Michal Cihar  <nijel@users.sourceforge.net>
    * tbl_addfield.php3: Highlight correct tab after changing structure.
    * libraries/sqlparser.lib.php3: Bug #788097 (add space after
      alpha_variable).

2003-08-12 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/export/csv.php3: Don't trim resulting line (bug #782483).
    * libraries/functions.js: Don't ask for confirmation of query that will
      not be executed (bug #783667).
    * lang/slovak: Updated, thanks to Lubos Klokner (erkac).
    * lang/czech: Updated, thanks to me :).

2003-08-11 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/export/csv.php3, libraries/export/latex.php3,
      libraries/export/xml.php3: Added some stripslashes to generate correct
      exports.

2003-08-10 Marc Delisle  <lem9@users.sourceforge.net>
    * server_status.php3: bug 786331, a 100,00% not internationalized, 
      and align values for "More status variables"
    * libraries/grab_globals.lib.php3: probable fix for IIS HTTP auth bug

2003-08-09 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/auth/cookie.auth.lib.php3: Cookies required message 
      should not look like an error

2003-08-08 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/catalan update, thanks to Xavier Navarro (xavin).
    * lang/lithuanian: Updated, thanks to Vilius Zigmantas.
    * lang/polish: Updated, thanks to Jakub Wilk (ubanus).
    * lang/english, french: typos about $strDBGMaxTimeMs

2003-08-07 Marc Delisle  <lem9@users.sourceforge.net>