@@ -1891,8 +1891,9 @@ installation.</p>
 <h3>[2. Usage]</h3>
 
 <p>Go to your tbl_properties.inc.php3 page (i.e. reached through clicking on the
-'properties' link for a table). There you will see three new fields at the end of the
-line. They are called 'MIME-type', 'Browser transformation' and 'Transformation options'.</p>
+'properties' link for a table). There click on &quot;Change&quot; (or change
+icon) and there you will see three new fields at the end of the line. They are
+called 'MIME-type', 'Browser transformation' and 'Transformation options'.</p>
 <br />
 
 <ul>
