@@ -14,8 +14,8 @@
           + Version history: ChangeLog
           + General notes: README
           + License: LICENSE
-     * Documentation version: $Id: Documentation.html,v 1.489 2003/08/07
-       17:18:49 lem9 Exp $
+     * Documentation version: $Id: Documentation.html,v 1.490 2003/08/15
+       08:01:34 nijel Exp $
 
 Requirements
 
@@ -1308,9 +1308,10 @@ Transformations
   [2. Usage]
 
    Go to your tbl_properties.inc.php3 page (i.e. reached through clicking
-   on the 'properties' link for a table). There you will see three new
-   fields at the end of the line. They are called 'MIME-type', 'Browser
-   transformation' and 'Transformation options'.
+   on the 'properties' link for a table). There click on "Change" (or
+   change icon) and there you will see three new fields at the end of the
+   line. They are called 'MIME-type', 'Browser transformation' and
+   'Transformation options'.
      * The field 'MIME-type' is a dropdown field. You have the options to
        leave that field empty or to use 'auto' [this feature is not yet
        available]. Please note that transformations are inactive as long
