@@ -7,6 +7,7 @@ $Source$
 
 2003-08-15 Michal Cihar  <nijel@users.sourceforge.net>
     * Documentation: Synced export FAQ with export page.
+    * Documentation: Fixed information about transformations.
 
 2003-08-14 Michal Cihar  <nijel@users.sourceforge.net>
     * server_privileges.php3: Fix notice about undefined index (bug #780861).
